:iphone: fix(ui/profile): fix profile width on mobile

--- a/ui/src/app/pages/profile/change-password/change-password.scss
+++ b/ui/src/app/pages/profile/change-password/change-password.scss
@@ -24,19 +24,20 @@
     width: 50vw;
 
     @include for-phone-only {
-        margin-top: 12px;
-        padding: 12px;
-        width: 100%;
+      min-width: 100%;;
+      margin-top: 12px;
+      padding: 12px;
+      width: 100%;
     }
 }
 
 .change-login-form {
-        width: 100%;
-      }
+  width: 100%;
+}
 
-      .form-button {
-        width: 100%;
-      }
+.form-button {
+  width: 100%;
+}
 
 .current-user {
   margin-left: auto;
