--- a/ui/src/app/pages/profile/profile.scss
+++ b/ui/src/app/pages/profile/profile.scss
@@ -11,6 +11,7 @@
 
 .profile-container {
     padding: 48px;
+
     background-color: white;
     margin-left: auto;
     margin-right: auto;
@@ -24,9 +25,10 @@
     width: 50vw;
 
     @include for-phone-only {
-        margin-top: 12px;
-        padding: 12px;
-        width: 100%;
+      min-width: 100%;
+      margin-top: 12px;
+      padding: 12px;
+      width: 100%;
     }
 }
 
@@ -47,6 +49,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include for-phone-only {
+      flex-direction: column;
+    }
 }
 
 span.ant-avatar {
